--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,8 @@ html
         /*= render 'header'*/
       - else
         = yield :header
+    - flash.each do |type, msg|
+      div class="alert alert-#{type}" = msg
     = yield
     - unless flash.empty?
       script[type="text/javascript"]
