--- a/app/views/guest/charges/new.html.slim
+++ b/app/views/guest/charges/new.html.slim
@@ -1,43 +1,43 @@
 .charge_section
   .charge_explanation
     .charge_explanation_title
-      = image_tag 'explanation_title'
+      = image_tag 'explanation_title.png'
     .charge_explanation_message
-      = image_tag 'paid_service_info_01'
+      = image_tag 'paid_service_info_01.png'
     .charge_explanation_flex
       .charge_explanation_side
-        = image_tag 'paid_service_info_02'
+        = image_tag 'paid_service_info_02.png'
       .charge_explanation_side
-        = image_tag 'paid_service_info_03'
+        = image_tag 'paid_service_info_03.png'
     .charge_explanation_flex
       .charge_explanation_side
-        = image_tag 'paid_service_info_04'
+        = image_tag 'paid_service_info_04.png'
       .charge_explanation_side
-        = image_tag 'paid_service_info_05'
+        = image_tag 'paid_service_info_05.png'
   .charge_info
     .charge_info_title
-      = image_tag 'info_title'
+      = image_tag 'info_title.png'
     .charge_info_flex
       .charge_info_side
-        = image_tag 'paid_service_info_09'
+        = image_tag 'paid_service_info_09.png'
       .charge_info_side
-        = image_tag 'paid_service_info_08'
+        = image_tag 'paid_service_info_08.png'
     .charge_info_flex
       .charge_info_side
-        = image_tag 'paid_service_info_07'
+        = image_tag 'paid_service_info_07.png'
       .charge_info_side.charge_info_month
-        = image_tag 'paid_service_info_06'
+        = image_tag 'paid_service_info_06.png'
 
   .charge_coin
     .charge_coin_title
-      = image_tag 'coin_title'
+      = image_tag 'coin_title.png'
     .charge_coin_flex
       .charge_coin_side
-        = image_tag 'ten_coin'
+        = image_tag 'ten_coin.png'
       .charge_coin_side
-        = image_tag 'fifty_coin'
+        = image_tag 'fifty_coin.png'
       .charge_coin_side
-        = image_tag 'onehundred_coin'
+        = image_tag 'onehundred_coin.png'
   = form_tag charges_path
     article
       label.amount
