--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -45,8 +45,8 @@
     h2 簡単使い方説明 - マッチング編
     .swiper-wrapper
       .swiper-slide = image_tag 'top_howto_match_pc.png'
-      .swiper-slide = image_tag 'top_howto_match_pc'
-      .swiper-slide = image_tag 'top_howto_match_pc'
+      .swiper-slide = image_tag 'top_howto_match_pc.png'
+      .swiper-slide = image_tag 'top_howto_match_pc.png'
     .swiper-pagination
     .swiper-button-prev
     .swiper-button-next
@@ -57,17 +57,17 @@
   br
 
   .col-md-12
-    = image_tag 'top_prem_explane_title_pc'
-    = image_tag 'top_price_pc'
+    = image_tag 'top_prem_explane_title_pc.png'
+    = image_tag 'top_price_pc.png'
 
 .top-container_sp
   .swiper-container
     h2 簡単使い方説明 - マッチング編
     .swiper-wrapper
-      .swiper-slide = image_tag 'top_howto_match_sp1'
-      .swiper-slide = image_tag 'top_howto_match_sp2'
-      .swiper-slide = image_tag 'top_howto_match_sp1'
-      .swiper-slide = image_tag 'top_howto_match_sp2'
+      .swiper-slide = image_tag 'top_howto_match_sp1.png'
+      .swiper-slide = image_tag 'top_howto_match_sp2.png'
+      .swiper-slide = image_tag 'top_howto_match_sp1.png'
+      .swiper-slide = image_tag 'top_howto_match_sp2.png'
     .swiper-pagination
     .swiper-button-prev
     .swiper-button-next
@@ -75,9 +75,9 @@
   br
   br
   br
-  = image_tag 'top_price_sp1', class: 'price_image price_image_one'
-  = image_tag 'top_price_sp2', class: 'price_image'
-  = image_tag 'top_price_sp3', class: 'price_image'
-  = image_tag 'top_price_sp4', class: 'price_image'
+  = image_tag 'top_price_sp1.png', class: 'price_image price_image_one'
+  = image_tag 'top_price_sp2.png', class: 'price_image'
+  = image_tag 'top_price_sp3.png', class: 'price_image'
+  = image_tag 'top_price_sp4.png', class: 'price_image'
 
 
