--- a/app/views/premium/user/index.html.erb
+++ b/app/views/premium/user/index.html.erb
@@ -6,6 +6,8 @@
           <th>ID</th>
           <th>写真</th>
           <th>名前</th>
+          <th></th>
+          <th></th>
           <th>いいね数</th>
           <th>ありがとう数</th>
         </tr>
@@ -16,6 +18,10 @@
           <td><%= link_to "#{user.id}", "/users/#{user.id}/mypage" %></td>
           <th><%= image_tag user.image1, :size => '50' %></th>
           <td><%= user.user.name %></td>
+          <td><%= link_to "チャット", "/premium/messages/#{user.id}", class: "btn btn-success" %></td>
+          <td><%= link_to "コミュ", "", class: "btn btn-warning" %></td>
+          <td></td>
+          <td></td>
         </tr>
         <% end %>
       </tbody>
