チュートリアル修正

--- a/app/assets/stylesheets/guest/layers/_mypage.sass
+++ b/app/assets/stylesheets/guest/layers/_mypage.sass
@@ -59,7 +59,21 @@
       -moz-border-radius: 5px
     img
       width: 100%
-
-
-
+      margin: 0
+  &_profile_registrate_box
+    position: fixed
+    display: block
+    left: 30%
+    top: 50px
+    width: 400px
+    height: 350px
+    background: none
+    z-index: 9999
+  &_registration-tutorial-bg
+    position: absolute
+    background: rgba( $black, 0.5 )
+    width: 100%
+    height: 2300px
+    z-index: 1000
+    display: block
 
