--- a/app/views/guest/users/_profile_modal.html.slim
+++ b/app/views/guest/users/_profile_modal.html.slim
@@ -330,3 +330,40 @@
                 = f.label :image1, id: "aaa" do
                   = image_tag @user.user_profile.image1, class: "imgView img-radius img-responsive"
                 = f.submit "画像変更", :class => "btn btn-info"
+
+
+- if current_user.user_profile.tutorial_status == 'pending'
+  .mypage_profile_registrate_box
+    .modal-dialog
+      .modal-margin
+        .modal-content
+
+          .modal-body
+            = form_for @user.user_profile, url: user_path(current_user) do |f|
+              .row
+                .col-md-12.select
+                  .form-group
+                    label
+                      | 属性
+                    = f.select :sex, UserProfile::SEX, {prompt:"選択してください"}, { autofocus: 'true', class: 'form-control'}
+              .row
+                .col-md-12.select
+                  .form-group
+                    label
+                      | タチ・ネコ
+                    = f.select :play_style, UserProfile::PLAY_STYLE, {prompt:"選択してください"}, { class: 'form-control'}
+
+              .row
+                .col-md-12.select
+                  .form-group
+                    label
+                      | 生年月日
+                    == sprintf( f.date_select(:birthday, use_month_numbers: true, start_year: 1930, end_year:   (Time.now.year - 18), default:    Date.new(1980, 1, 1), date_separator: '%s', datetime_separator: '%s' ), '年', '月') + '日'
+              .row
+                .col-md-12.select
+                  .form-group
+                    label
+                      | 居住地
+                    = f.collection_select :address, JpPrefecture::Prefecture.all, :code, :name, {prompt:"選択してください"} ,{:class => "form-control"}
+                .text-center
+                  = f.submit '保存', class: "btn btn-info text-center"
