--- a/app/assets/stylesheets/guest/layers/_mypage.sass
+++ b/app/assets/stylesheets/guest/layers/_mypage.sass
@@ -41,7 +41,7 @@
     .edit_button
       float: right
   &_profile_body
-    padding: 10px
+    padding: 10px 10px 0 10px
     +responsive(smartphone)
       padding: 5px
   &_user_communities
@@ -50,6 +50,7 @@
     float: left
     width: 23%
     margin-right: 2%
+    padding-bottom: 10px
     &:nth-child(4n)
       margin-right: 0
     .img-radius
