--- a/app/views/guest/users/_profile_modal.html.slim
+++ b/app/views/guest/users/_profile_modal.html.slim
@@ -329,7 +329,11 @@
                 = f.file_field :image1, class: "form-control image-field", :style => "display: none;", :id => "user_aaa", :style => "display: none;", :id => "user_aaa"
                 = f.label :image1, id: "aaa" do
                   = image_tag @user.user_profile.image1, class: "imgView img-radius img-responsive"
-                = f.submit "画像変更", :class => "btn btn-info"
+                / = f.label :image1, id: "aaa" do
+                /   = image_tag @user.user_profile.image2, class: "imgView img-radius img-responsive"
+                / = f.label :image1, id: "aaa" do
+                /   = image_tag @user.user_profile.image3, class: "imgView img-radius img-responsive"
+              = f.submit "画像変更", :class => "btn btn-info"
 
 
 - if current_user.user_profile.tutorial_status == 'pending'
@@ -337,7 +341,8 @@
     .modal-dialog
       .modal-margin
         .modal-content
-
+          .modal-header
+            h5 まずはプロフィールを入力しよう！
           .modal-body
             = form_for @user.user_profile, url: user_path(current_user) do |f|
               .row
