topスライド画像変更

--- a/app/views/guest/pages/index.html.slim
+++ b/app/views/guest/pages/index.html.slim
@@ -42,15 +42,13 @@
 
 .top-container
   .swiper-container
-    h2 簡単使い方説明 - マッチング編
     .swiper-wrapper
-      .swiper-slide = image_tag 'top_howto_match_pc.png'
-      .swiper-slide = image_tag 'top_howto_match_pc.png'
-      .swiper-slide = image_tag 'top_howto_match_pc.png'
+      .swiper-slide = image_tag 'top_howto_match_pc1.png'
+      .swiper-slide = image_tag 'top_howto_match_pc2.png'
     .swiper-pagination
-    .swiper-button-prev
+    / .swiper-button-prev
     .swiper-button-next
-    .swiper-scrollbar
+    / .swiper-scrollbar
   /*ここ画像作成中*/
   br
   br
@@ -62,16 +60,15 @@
 
 .top-container_sp
   .swiper-container
-    h2 簡単使い方説明 - マッチング編
     .swiper-wrapper
       .swiper-slide = image_tag 'top_howto_match_sp1.png'
       .swiper-slide = image_tag 'top_howto_match_sp2.png'
-      .swiper-slide = image_tag 'top_howto_match_sp1.png'
-      .swiper-slide = image_tag 'top_howto_match_sp2.png'
+      .swiper-slide = image_tag 'top_howto_match_sp3.png'
+      .swiper-slide = image_tag 'top_howto_match_sp4.png'
     .swiper-pagination
-    .swiper-button-prev
+    / .swiper-button-prev
     .swiper-button-next
-    .swiper-scrollbar
+    / .swiper-scrollbar
   br
   br
   br
