--- a/app/assets/stylesheets/guest/layers/_page.sass
+++ b/app/assets/stylesheets/guest/layers/_page.sass
@@ -127,15 +127,17 @@
   li
     padding: 0px 0px 0px 250px
 .top-container
-  width: 1000px
-  margin-left: 35px
+  width: 800px
+  margin-left: 100px
   +responsive(smartphone)
     display: none
 .top-container_sp
   width: 100%
-  padding: 0 3%
+  padding: 0 8%
   +responsive(pc)
     display: none
+  img
+    width: 100%
   .price_image
     width: 47%
     margin-right: 5%
