--- a/app/assets/stylesheets/guest/layers/_navbar.sass
+++ b/app/assets/stylesheets/guest/layers/_navbar.sass
@@ -47,7 +47,7 @@
       +fontawesome('\f044')
   &_site_title
     float: left
-    height: 45px
+    height: 60px
     a
       +link_block(#888)
     img
@@ -57,6 +57,7 @@
         width: 160px
     small
       font-weight: normal
+      margin-top: 10px
       +fontsize($font-xsmall)
       +responsive(pc)
         margin-left: 1em
