--- a/app/views/guest/charges/new.html.slim
+++ b/app/views/guest/charges/new.html.slim
@@ -14,35 +14,35 @@
         = image_tag 'paid_service_info_04.png'
       .charge_explanation_side
         = image_tag 'paid_service_info_05.png'
-  .charge_info
-    .charge_info_title
-      = image_tag 'info_title.png'
-    .charge_info_flex
-      .charge_info_side
-        = image_tag 'paid_service_info_09.png'
-      .charge_info_side
-        = image_tag 'paid_service_info_08.png'
-    .charge_info_flex
-      .charge_info_side
-        = image_tag 'paid_service_info_07.png'
-      .charge_info_side.charge_info_month
-        = image_tag 'paid_service_info_06.png'
 
-  .charge_coin
-    .charge_coin_title
-      = image_tag 'coin_title.png'
-    .charge_coin_flex
-      .charge_coin_side
-        = image_tag 'ten_coin.png'
-      .charge_coin_side
-        = image_tag 'fifty_coin.png'
-      .charge_coin_side
-        = image_tag 'onehundred_coin.png'
   = form_tag charges_path
-    article
-      label.amount
-        span Amount: $5.00
+    .charge_info
+      .charge_info_title
+        = image_tag 'info_title.png'
+      .charge_info_flex
+        .charge_info_side
+          = image_tag 'paid_service_info_09.png'
+        .charge_info_side
+          = image_tag 'paid_service_info_08.png'
+      .charge_info_flex
+        .charge_info_side
+          = image_tag 'paid_service_info_07.png'
+        .charge_info_side.charge_info_month
+          = image_tag 'paid_service_info_06.png'
+    script.stripe-button data-currency="JPY" data-amount="2000" data-description=("有料会員") data-image="https://stripe.com/img/documentation/checkout/marketplace.png" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" data-name="Stripe.com" data-zip-code="true" src="https://checkout.stripe.com/checkout.js"
 
-    script.stripe-button data-currency="JPY" data-amount="2000" data-description=("2 widgets") data-image="https://stripe.com/img/documentation/checkout/marketplace.png" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" data-name="Stripe.com" data-zip-code="true" src="https://checkout.stripe.com/checkout.js"
-
-    / script.stripe-button data-amount="500" data-description=("A month's subscription") data-key=("#{Rails.configuration.stripe[:publishable_key]}") data-locale="auto" src="https://checkout.stripe.com/checkout.js"
+  = form_tag coin_charge_charges_path
+    .charge_coin
+      .charge_coin_title
+        = image_tag 'coin_title.png'
+      .charge_coin_flex
+        .charge_coin_side
+          = image_tag 'ten_coin.png'
+        .charge_coin_side
+          = image_tag 'fifty_coin.png'
+        .charge_coin_side
+          = image_tag 'onehundred_coin.png'
+    / article
+    /   label.amount
+    /     span Amount: $5.00
+    script.stripe-button data-currency="JPY" data-amount="2000" data-description=("有料会員") data-image="https://stripe.com/img/documentation/checkout/marketplace.png" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" data-name="Stripe.com" data-zip-code="true" src="https://checkout.stripe.com/checkout.js"
