stripeデザイン完成

--- a/app/assets/stylesheets/guest/layers/_charge.sass
+++ b/app/assets/stylesheets/guest/layers/_charge.sass
@@ -7,6 +7,10 @@
       margin-bottom: 0
       +responsive(smartphone)
         width: 100%
+    .hide_button
+      visibility: hidden
+    label:hover
+      cursor: pointer
   &_explanation
     margin-bottom: 50px
     &_title
@@ -50,3 +54,5 @@
     &_side
       +responsive(smartphone)
         width: 30%
+.charge_stripe
+  display: none
