--- a/app/views/guest/charges/new.html.slim
+++ b/app/views/guest/charges/new.html.slim
@@ -21,28 +21,31 @@
         = image_tag 'info_title.png'
       .charge_info_flex
         .charge_info_side
-          = image_tag 'paid_service_info_09.png'
+          = radio_button_tag :plan, "one_year",{},class: 'hide_button'
+          = label_tag :plan_one_year, image_tag('paid_service_info_09.png'), class: 'charge_button'
         .charge_info_side
-          = image_tag 'paid_service_info_08.png'
+          = radio_button_tag :plan, "six_months",{},class: 'hide_button'
+          = label_tag :plan_six_months, image_tag('paid_service_info_08.png'), class: 'charge_button'
       .charge_info_flex
         .charge_info_side
-          = image_tag 'paid_service_info_07.png'
+          = radio_button_tag :plan, "three_months",{},class: 'hide_button'
+          = label_tag :plan_three_months, image_tag('paid_service_info_07.png'), class: 'charge_button'
         .charge_info_side.charge_info_month
-          = image_tag 'paid_service_info_06.png'
-    script.stripe-button data-currency="JPY" data-amount="2000" data-description=("有料会員") data-image="https://stripe.com/img/documentation/checkout/marketplace.png" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" data-name="Stripe.com" data-zip-code="true" src="https://checkout.stripe.com/checkout.js"
+          = radio_button_tag :plan, "one_month",{},class: 'hide_button'
+          = label_tag :plan_one_month, image_tag('paid_service_info_06.png'), class: 'charge_button'
 
-  = form_tag coin_charge_charges_path
     .charge_coin
       .charge_coin_title
         = image_tag 'coin_title.png'
       .charge_coin_flex
         .charge_coin_side
-          = image_tag 'ten_coin.png'
+          = radio_button_tag :coin, "ten_coins",{},class: 'hide_button'
+          = label_tag :coin_ten_coins, image_tag('ten_coins.png', :mouseover => image_path('btn_over.png')), class: 'charge_button'
         .charge_coin_side
-          = image_tag 'fifty_coin.png'
+          = radio_button_tag :coin, "fifty_coins",{},class: 'hide_button'
+          = label_tag :coin_fifty_coins, image_tag('fifty_coins.png'), class: 'charge_button'
         .charge_coin_side
-          = image_tag 'onehundred_coin.png'
-    / article
-    /   label.amount
-    /     span Amount: $5.00
+          = radio_button_tag :coin, "one_hundred_coins",{},class: 'hide_button'
+          = label_tag :coin_one_hundred_coins, image_tag('one_hundred_coins.png'), class: 'charge_button'
+  .charge_stripe
     script.stripe-button data-currency="JPY" data-amount="2000" data-description=("有料会員") data-image="https://stripe.com/img/documentation/checkout/marketplace.png" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" data-name="Stripe.com" data-zip-code="true" src="https://checkout.stripe.com/checkout.js"
