--- a/app/assets/stylesheets/guest/layers/_charge.sass
+++ b/app/assets/stylesheets/guest/layers/_charge.sass
@@ -8,7 +8,8 @@
       +responsive(smartphone)
         width: 100%
     .hide_button
-      visibility: hidden
+      // visibility: hidden
+      display: none
     label:hover
       cursor: pointer
   &_explanation
