--- a/app/views/guest/charges/new.html.slim
+++ b/app/views/guest/charges/new.html.slim
@@ -21,31 +21,33 @@
         = image_tag 'info_title.png'
       .charge_info_flex
         .charge_info_side
-          = radio_button_tag :plan, "one_year",{},class: 'hide_button'
-          = label_tag :plan_one_year, image_tag('paid_service_info_09.png'), class: 'charge_button'
+          = radio_button_tag :charge, "one_year",{},class: 'hide_button'
+          = label_tag :charge_one_year, image_tag('paid_service_info_09.png'), class: 'charge_button'
         .charge_info_side
-          = radio_button_tag :plan, "six_months",{},class: 'hide_button'
-          = label_tag :plan_six_months, image_tag('paid_service_info_08.png'), class: 'charge_button'
+          = radio_button_tag :charge, "six_months",{},class: 'hide_button'
+          = label_tag :charge_six_months, image_tag('paid_service_info_08.png'), class: 'charge_button'
       .charge_info_flex
         .charge_info_side
-          = radio_button_tag :plan, "three_months",{},class: 'hide_button'
-          = label_tag :plan_three_months, image_tag('paid_service_info_07.png'), class: 'charge_button'
+          = radio_button_tag :charge, "three_months",{},class: 'hide_button'
+          = label_tag :charge_three_months, image_tag('paid_service_info_07.png'), class: 'charge_button'
         .charge_info_side.charge_info_month
-          = radio_button_tag :plan, "one_month",{},class: 'hide_button'
-          = label_tag :plan_one_month, image_tag('paid_service_info_06.png'), class: 'charge_button'
+          = radio_button_tag :charge, "one_month",{},class: 'hide_button'
+          = label_tag :charge_one_month, image_tag('paid_service_info_06.png'), class: 'charge_button'
 
     .charge_coin
       .charge_coin_title
         = image_tag 'coin_title.png'
       .charge_coin_flex
         .charge_coin_side
-          = radio_button_tag :coin, "ten_coins",{},class: 'hide_button'
-          = label_tag :coin_ten_coins, image_tag('ten_coins.png', :mouseover => image_path('btn_over.png')), class: 'charge_button'
+          = radio_button_tag :charge, "ten_coins",{},class: 'hide_button'
+          = label_tag :charge_ten_coins, image_tag('ten_coins.png', :mouseover => image_path('btn_over.png')), class: 'charge_button'
         .charge_coin_side
-          = radio_button_tag :coin, "fifty_coins",{},class: 'hide_button'
-          = label_tag :coin_fifty_coins, image_tag('fifty_coins.png'), class: 'charge_button'
+          = radio_button_tag :charge, "fifty_coins",{},class: 'hide_button'
+          = label_tag :charge_fifty_coins, image_tag('fifty_coins.png'), class: 'charge_button'
         .charge_coin_side
-          = radio_button_tag :coin, "one_hundred_coins",{},class: 'hide_button'
-          = label_tag :coin_one_hundred_coins, image_tag('one_hundred_coins.png'), class: 'charge_button'
+          = radio_button_tag :charge, "one_hundred_coins",{},class: 'hide_button'
+          = label_tag :charge_one_hundred_coins, image_tag('one_hundred_coins.png'), class: 'charge_button'
+
+      / = submit_tag '保存', class: "btn btn-default"
   .charge_stripe
     script.stripe-button data-currency="JPY" data-amount="2000" data-description=("有料会員") data-image="https://stripe.com/img/documentation/checkout/marketplace.png" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" data-name="Stripe.com" data-zip-code="true" src="https://checkout.stripe.com/checkout.js"
