--- a/app/views/guest/charges/new.html.slim
+++ b/app/views/guest/charges/new.html.slim
@@ -50,4 +50,4 @@
 
       / = submit_tag '保存', class: "btn btn-default"
   .charge_stripe
-    script.stripe-button data-currency="JPY" data-amount="2000" data-description=("有料会員") data-image="https://stripe.com/img/documentation/checkout/marketplace.png" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" data-name="Stripe.com" data-zip-code="true" src="https://checkout.stripe.com/checkout.js"
+    script.stripe-button src="https://checkout.stripe.com/checkout.js"　data-currency="JPY" data-amount="10000" data-description=("Master/Amex/Visaのみ利用可能です") data-image="/assets/sex_badge_0" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" data-name="Lemon" data-zip-code="true" data-panel-label="お支払い"
