--- a/app/views/guest/users/_sidebar.html.slim
+++ b/app/views/guest/users/_sidebar.html.slim
@@ -48,7 +48,7 @@
           .status_button
             = link_to 'プラン変更', new_charge_path
       .sidebar_status_section
-        .status_title_coins = '残ポイント数'
+        .status_title_coins = '残コイン数'
         .status_body_plan
           - if @user.user_profile.coins_count
               = @user.user_profile.coins_count
