プロフィールからコイン購入モーダル追加

--- a/app/assets/stylesheets/guest/layers/_charge.sass
+++ b/app/assets/stylesheets/guest/layers/_charge.sass
@@ -55,5 +55,13 @@
     &_side
       +responsive(smartphone)
         width: 30%
+    &_side_modal
+      width: 30%
+      img
+        width: 100%
+      .hide_button
+        display: none
+      label:hover
+        cursor: pointer
 .charge_stripe
   display: none
