--- a/app/views/layouts/guest.html.slim
+++ b/app/views/layouts/guest.html.slim
@@ -29,7 +29,7 @@ html
       // content
       #layout_content
         #layout_banner
-          = image_tag 'banner.png', width: '100%', class: 'baner-image'
+          = link_to image_tag('banner.png', width: '100%', class: 'baner-image'), new_charge_path
         = yield
 
     // footer
