--- a/app/assets/stylesheets/guest/layers/_sidebar.sass
+++ b/app/assets/stylesheets/guest/layers/_sidebar.sass
@@ -129,7 +129,9 @@
             padding: 5px 0
             width: 96%
             left: 2%
-
+        .status_button_modal
+          @extend .status_button
+          padding: 2px
 
 
 
