--- a/app/assets/stylesheets/guest/layers/_mypage.sass
+++ b/app/assets/stylesheets/guest/layers/_mypage.sass
@@ -14,7 +14,9 @@
       display: flex
       justify-content: space-between
     +responsive(smartphone)
+      width: 90%
       padding: 10px
+      margin: 0 5% 5%
   &_gage_bar
     width: 65%
     +responsive(smartphone)
