--- a/app/views/premium/messages/show.html.slim
+++ b/app/views/premium/messages/show.html.slim
@@ -23,7 +23,7 @@
       .message_container_sp
         .message_list
           - @messages.reverse.each do |m|
-              - if m.sender_id == current_user.id
+              - if m.sender_id == @pre_id
                 .message_card_right =  m.body
               - else
                 .message_card_left = m.body
@@ -31,6 +31,6 @@
           = form_for @message do |f|
             = f.text_area :body, class: 'message_text', :placeholder => "メッセージを入力してください"
             = f.hidden_field :partnership_id, value: @partnership.id
-            = f.hidden_field :sender_id, value: current_user.id
+            = f.hidden_field :sender_id, value: @pre_id
             = f.submit "送信", :class => "btn btn-danger pull-right", data: { disable_with: "送信中..." }
       = paginate @messages
