--- a/app/views/premium/user/index.html.erb
+++ b/app/views/premium/user/index.html.erb
@@ -23,7 +23,7 @@
           </td>
           <td>lemon1234</td>
           <td><%= link_to "チャット", premium_messages_path(user_id: user.id), class: "btn btn-success" %></td>
-          <td><%= link_to "コミュ", "", class: "btn btn-warning" %></td>
+          <td><%= link_to "つぶやき", "", class: "btn btn-warning" %></td>
           <td></td>
           <td></td>
         </tr>
