--- a/app/views/guest/communities/_form.html.slim
+++ b/app/views/guest/communities/_form.html.slim
@@ -25,4 +25,4 @@
 
                     = f.label :image
                     = f.file_field :image, class: "form-control image-field"
-                  = f.submit '保存', class: "btn btn-primary", data: { confirm: 'この内容で保存してもいいですか', disable_with: '処理中...' }
+                  = f.submit '保存', class: "btn btn-primary"
